fix swagger discriptions
